This is my first change

--- a/video23/practice.html
+++ b/video23/practice.html
@@ -10,7 +10,7 @@
             padding: 5px;
             margin: 5px;
         }
-        .box{
+        .box div{
             border: 3px solid;
             display: inline block;
             background-color: aqua;
