--- a/video25/index.html
+++ b/video25/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>List styling</title>
+    <style>
+
+    </style>
 </head>
+
 <body>
-    
+    <nav>
+        <ul>
+            <li></li>
+        </ul>
+    </nav>
 </body>
+
 </html>
