--- a/video25/index.html
+++ b/video25/index.html
@@ -6,14 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>List styling</title>
     <style>
-
+        nav ul li {
+            list-style: devanagari;
+            background-color: yellow;
+            list-style-position: inside;
+            border: 3px solid black;
+            list-style-image: url(https://www.animatedgif.net/new/new9_e0.gif);
+            /* list-style-type: "🥰"; */
+        }
     </style>
 </head>
 
 <body>
     <nav>
         <ul>
-            <li></li>
+            <li>HOme</li>
+            <li>About</li>
+            <li>Contect</li>
         </ul>
     </nav>
 </body>
