CSS overflow property

--- a/video26/index.html
+++ b/video26/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CSS overplow property</title>
+    <style>
+        .box {
+            width: 50vw;
+            height: 10vh;
+            border: 3px solid black;
+            /* overflow: scroll; */
+            overflow: auto;
+            /* white-space: nowrap; */
+        }
+    </style>
 </head>
+
 <body>
-    
+    <div class="box">
+        I am a good boy and Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit amet consequuntur quis,
+        voluptas praesentium perspiciatis repellat, ipsum asperiores ex non aperiam quasi? Non, esse corrupti iure
+        veniam sint quo explicabo!
+    </div>
 </body>
+
 </html>
