CSS shadow styling

--- a/video24/practice1.html
+++ b/video24/practice1.html
@@ -6,6 +6,7 @@
     <title>CSS border outline ofset </title>
     <style>
 .dk{
+    text-shadow: 3px 1px 3px black;;
     border: 3px solid black;
     padding: 20px;
     margin: 20px auto;
