--- a/video25/index.html
+++ b/video25/index.html
@@ -11,6 +11,8 @@
             background-color: yellow;
             list-style-position: inside;
             border: 3px solid black;
+            padding: 5px;
+            margin: 5px auto;
             list-style-image: url(https://www.animatedgif.net/new/new9_e0.gif);
             /* list-style-type: "🥰"; */
         }
