mini project page design

--- a/video5/index.html
+++ b/video5/index.html
@@ -11,7 +11,7 @@
    <table>
     <caption>Employee Detaisls</caption>
   <tr>
-    <th>companmt l </th>
+    <th>companmt</th>
     <th>Contact</th>
     <th>Country</th>
     <th>Dilkhs</th>
