--- a/video28/index.html
+++ b/video28/index.html
@@ -11,13 +11,13 @@
 }
 .box1{
     left: 192px;
-    /* position: absolute; */
-    position: sticky;
+    position: absolute;
+    /* position: sticky; */
     top: 0px;
-    height: 111px;
+    height: 10px;
     width: 100%;
-    margin: 0;
-    padding: 0;
+    margin: 110;
+    padding: 110;
     top: 0;
    z-index: 1;
 background-color: aqua;
@@ -27,6 +27,7 @@ background-color: aqua;
    /* position: relative; */
    left: 64px;
     top: -74px;
+    height: 100px;
 }
 .box3{
    background-color: blueviolet; 
@@ -41,21 +42,22 @@ background-color: aqua;
     height: 133px;
     width: 80vw;
     margin: 5px auto;
-    padding: 5px;
+    padding: 60px;
     border: 3px solid black;
 
 }
 .parent{
+    /* scroll-behavior: auto; */
     padding: 43px;
     margin: 34px;
     border: 3px solid black;
     /* transform, filter or perspective: can also make an element appear a positioned; */
-    /* position: relative; */
+    position: relative;
     /* transform: translate(0); */
     /* filter: invert(0); */
-    perspective: 0em;
+    /* perspective: 0em; */
 }
-    </style>
+      </style>
 </head>
 <body>
     <div class="parent">
