--- a/video32/index.html
+++ b/video32/index.html
@@ -9,17 +9,14 @@
         @import url('https://fonts.googleapis.com/css2?family=Stack+Sans+Notch:wght@200..700&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
         body {
-            padding: 12px;
+            padding: 13px;
             display: flex;
+            background-color: gray;
         }
 
         * {
             margin: 0;
-            padding: 02
-        }
-
-        body {
-            background-color: gray;
+            padding: 0;
         }
 
         .card {
@@ -27,7 +24,7 @@
             width: 198px;
             min-height: 244px;
             border-radius: 9px;
-            padding: 0 0 34px 0;
+            padding: 0 0 27px 0;
             margin: 14px;
             box-shadow: 0px 2px 20px 2px;
         }
@@ -38,16 +35,6 @@
 
         .image img {
             border-radius: 9px;
-        }
-
-        .content {
-            padding: 3px 13px;
-        }
-
-        .content p {
-            font-size: 12px;
-            color: gray;
-            font-family: "Stack Sans Notch", sans-serif;
         }
 
         .capsules {
@@ -61,6 +48,16 @@
             font-size: 12px;
         }
 
+        .content {
+            padding: 2px 13px;
+        }
+
+        .content p {
+            font-size: 12px;
+            color: gray;
+            font-family: "Stack Sans Notch", sans-serif;
+        }
+
         h2 {
             font-family: "Stack Sans Notch", sans-serif;
         }
@@ -68,7 +65,8 @@
         .button {
             text-align: center;
         }
-        .button button{
+
+        .button button {
             padding: 6px 10px;
             border-radius: 14px;
             background-color: rgb(224, 226, 252);
@@ -77,7 +75,8 @@
             border: none;
             font-weight: bold;
         }
-        .button button:hover{
+
+        .button button:hover {
             background-color: antiquewhite;
             color: brown;
         }
@@ -105,7 +104,7 @@
         </div>
     </div>
 
-     <div class="card">
+    <div class="card">
         <div class="image">
             <img width="188px"
                 src="https://th.bing.com/th/id/OIP.APrjz5OPtu-jiVkjEFqd_gHaDY?w=186&h=108&c=7&qlt=90&bgcl=5a2433&r=0&o=6&dpr=1.3&pid=13.1"
