--- a/video38/practice/practice_1.html
+++ b/video38/practice/practice_1.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flexbox in CSS & html</title>
+    <title>Flex-Box practice in CSS</title>
     <style>
         .container {
-            /* There is no justify-item in flexbox */
+            /* There is no justify-item in flex-box */
             border: 2px solid red;
             display: flex;
             height: 40vh;
@@ -15,30 +15,21 @@
             /* justify-content: space-between; */
             justify-content: center;
             /* justify-content: flex-start; */
-            /* align-items: center; */
-            /* flex-direction: column; */
+            /* justify-content: flex-end; */
+            align-items: center;
+            align-content: center;
+            flex-direction: column;
             flex-wrap: wrap;
-            /* align-content: center; */
-            flex-flow: row wrap;
-            row-gap: 10px;
-            column-gap: 20px;
+            gap: 5px 40px;
+
         }
 
         .item {
-            height: 62px;
+            height: 63px;
             width: 62px;
             border: 2px solid black;
-            /* margin: 5px; */
+            margin: 5px;
             background-color: blueviolet;
-        }
-        .order-1{
-            order: 1;
-        }
-          .order-2{
-            order: 2;
-        }
-          .order-3{
-            order: 3;
         }
     </style>
 </head>
@@ -46,18 +37,14 @@
 <body>
     <main>
         <div class="container">
-            <div class="item order-100">1</div>
-            <div class="item">2</div>
-            <div class="item order-1">3</div>
-            <div class="item">4</div>
-            <div class="item">5</div>
             <div class="item">1</div>
             <div class="item">2</div>
             <div class="item">3</div>
             <div class="item">4</div>
-            <div class="item">5</div>
+            <div class="item">1</div>
+            <div class="item">2</div>
+            <div class="item">3</div>
             <div class="item">4</div>
-            <div class="item">5</div>
         </div>
     </main>
 </body>
