--- a/video39/index.html
+++ b/video39/index.html
@@ -6,17 +6,26 @@
     <title>CSS Grid</title>
     <style>
         .container{
+            height: 50vh;
+            width: 80vw;
             border: 2px solid rgb(10, 10, 0);
             display: grid;
-            grid-template-columns: [pahla] 120px [dusra] 100px [t];
-            grid-template-rows: 100px 100px 100px;
+            /* grid-template-columns: [pahla] 120px [dusra] 100px [t];
+            grid-template-rows: 100px 100px 100px; */
+            grid-template-columns: 1fr 2fr 1fr;
+            /* grid-template-columns: repeat(4, 1fr); */
+            row-gap: 20px;
+            column-gap: 40px;
+            justify-items: center;
+
         }
         .item{
             border: 2px solid red;
             height: 55px;
             width: 55px;
+            
         }
-        .item-4{
+        /* .item-4{
             grid-row: 1/2;
             grid-column: pahla/t;
         }
@@ -24,8 +33,8 @@
             grid-row-start: 1;
             grid-row-end: 2;
             /* grid-row: 1/2; */
-            grid-column: 1/2;
-        }
+            /* grid-column: 1/2;
+        } */ 
     </style>
 </head>
 <body>
