--- a/New folder (2)/index.html
+++ b/New folder (2)/index.html
@@ -10,7 +10,10 @@
             margin: 0;
             padding: 0;
         }
-
+            header{
+                position: sticky;
+                top: 0;
+            }
         nav {
             background-color: pink;
             height: 83px;
@@ -20,6 +23,7 @@
             background-color: green;
             margin: 12px 34px;
             height: 283px;
+            padding: 55px 23px;
             /* text-align: center; */
         }
 
@@ -46,13 +50,25 @@
 
         main {
             background-color: black;
+            color: white;
         }
 
         .box {
             padding: 34px;
             border: 2px solid white;
-            margin: 0 34vw auto;
-            font-size: 2em;
+            margin: 0 20vw auto;
+            font-size: 0.9em;
+            border-radius: 14px;
+            background-color: antiquewhite;
+        }
+        .orangebox{
+            height: 62px;
+            width: 62px;
+            background-color: orange;
+            position: fixed;
+            bottom: 92px;
+            right: 23px;
+            border-radius: 60px;
         }
     </style>
 </head>
@@ -70,11 +86,22 @@
             <div class="box2"></div>
         </div>
     </main>
-    <footer>
         <div class="box">
             <p>Welcome to Sigma Web Development Express</p>
         </div>
-    </footer>
+
+         <main>
+        <div class="container">
+            <div class="box1"></div>
+            <div class="box2"></div>
+        </div>
+    </main>
+        <div class="box">
+            <p>Welcome to Sigma Web Development Express</p>
+        </div>
+        <div class="orangebox">
+    
+        </div>
 </body>
 
 </html>
