My first Demo website

--- a/video41/index.html
+++ b/video41/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Navbar Design</title>
     <style>
-        header{
+        header {
             position: sticky;
             top: 0;
         }
@@ -35,7 +35,8 @@
             padding: 10px 0;
             background-color: purple;
             /* box-shadow: 0px 1px 5px 1px; */
-            box-shadow: 0px 1px 6px 2px;;
+            box-shadow: 0px 1px 6px 2px;
+            ;
             border-style: none;
         }
 
@@ -82,7 +83,7 @@
             grid-area: nav;
             background-color: aqua;
             padding: 4px;
-
+            animation: alternate-reverse;
         }
 
         .item-2 {
@@ -124,6 +125,7 @@
             background-color: white;
             color: blue;
             font-weight: bolder;
+            /* content-visibility: hidden; */
         }
 
         .item-2:hover {
@@ -233,16 +235,17 @@
             color: rgb(222, 0, 152);
             padding: 10px;
         }
-        .laout:hover{
-             background-color: white;
+
+        .laout:hover {
+            background-color: white;
             color: blue;
             font-weight: bolder;
         }
-/* Design_3 */
-.orangebox{
+
+        /* Design_3 */
+        .orangebox {
             height: 62px;
             width: 62px;
-            background-color:;
             position: fixed;
             bottom: 92px;
             right: 23px;
@@ -253,6 +256,7 @@
         }
     </style>
 </head>
+
 <body>
     <header>
         <nav>
@@ -306,7 +310,7 @@
     </div>
 
     <div class="orangebox">
-         <li class="item4"><img height="70px" width="70px" src="serv.webp" alt=""></li>
+        <li class="item4"><img height="70px" width="70px" src="serv.webp" alt=""></li>
     </div>
 </body>
 
