____My First Demo Website____

--- a/video41/index.html
+++ b/video41/index.html
@@ -39,6 +39,14 @@
             ;
             border-style: none;
         }
+        nav li{
+            color: rgb(58, 255, 4);
+            display: grid;
+            text-align: center;
+            font-weight: bolder;
+            text-align: center;
+            font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        }
 
         .item1 {
             grid-area: nav1;
@@ -260,10 +268,10 @@
 <body>
     <header>
         <nav>
-            <li class="item1"><img height="40px" width="40px" src="image.webp" alt=""></li>
-            <li class="item2"><img height="40px" width="40px" src="cl.webp" alt=""></li>
-            <li class="item3"><img height="40px" width="40px" src="cont.webp" alt=""></li>
-            <li class="item4"><img height="40px" width="40px" src="serv.webp" alt=""></li>
+            <li class="item1"><a href="https://dilkhush735.blogspot.com/">Home</a><img height="40px" width="40px" src="image.webp" alt=""></li>
+            <li class="item2"><a href="https://dilkhush100.blogspot.com/">Click Here</a><img height="40px" width="40px" src="cl.webp" alt=""></li>
+            <li class="item3"><a href="https://jsdl.in/RSL-GXR1764315985">Service</a><img height="40px" width="40px" src="cont.webp" alt=""></li>
+            <li class="item4"><a href="https://www.justdial.com/Madhepura/Dilkhush-Photo-Printing-Center-Ajgaiva-Chausa/9999P6476-6476-250304210110-L1P2_BZDET/service-catalog-photography-charges#:~:text=WhatsApp-,Contact,-Show%20Number">Contect Us</a><img height="40px" width="40px" src="serv.webp" alt=""></li>
 
         </nav>
     </header>
@@ -312,6 +320,7 @@
     <div class="orangebox">
         <li class="item4"><img height="70px" width="70px" src="serv.webp" alt=""></li>
     </div>
+    
 </body>
 
 </html>
