Search bar animation

--- a/form.html
+++ b/form.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        label {display: block;}
-        label{
+        label {
+            display: block;
+        }
+
+        label {
             font-weight: bolder;
         }
 
@@ -18,20 +22,21 @@
             border: 2px solid red;
             border-radius: 8px;
         }
-        input:hover{
+
+        input:hover {
             box-shadow: 3px 1px 8px;
         }
     </style>
 </head>
+
 <body>
     <h2>Name input type</h2>
     <form>
         <label for="fname">First Name : </label>
-        <input type="text" id="fname"
-         name="fname">
+        <input type="text" id="fname" name="fname">
         <label for="lname">Last Name : </label>
-        <input type="text" id="lname" 
-        name="lname">
+        <input type="text" id="lname" name="lname">
     </form>
 </body>
+
 </html>
