UltraEdit Website Design

--- a/video44/index.html
+++ b/video44/index.html
@@ -120,19 +120,27 @@
         .footer .topic2 p {
             text-align: center;
         }
-        .footer .box{
+
+        .footer .box {
             text-align: center;
             box-sizing: border-box;
             display: flex;
-            
+
         }
-        .footer .box1{
-            width: 500px;
+
+        .footer .box1 {
+            width: 350px;
             border: 2px solid gray;
             border-radius: 9px;
             background-color: rgb(255, 226, 5);
-            align-content: center;
-            margin: 50px auto;
+            margin: 10px auto;
+            align-items: center;
+        }
+
+        .Download {
+            font-size: 25px;
+            font-weight: bolder;
+            color: gray;
         }
     </style>
 </head>
@@ -268,10 +276,25 @@
         </div>
         <div class="box">
             <div class="box1">
-                <h3>Download for mackbook ro Linux</h3>
+                <h3><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="17" height="17" color="#050005"
+                        fill="none" stroke="#050005" stroke-width="1.5" stroke-linejoin="round">
+                        <path d="M12 5.75C12 3.75 13.5 1.75 15.5 1.75C15.5 3.75 14 5.75 12 5.75Z" />
+                        <path
+                            d="M12.5 8.09001C11.9851 8.09001 11.5867 7.92646 11.1414 7.74368C10.5776 7.51225 9.93875 7.25 8.89334 7.25C7.02235 7.25 4 8.74945 4 12.7495C4 17.4016 7.10471 22.25 9.10471 22.25C9.77426 22.25 10.3775 21.9871 10.954 21.7359C11.4815 21.5059 11.9868 21.2857 12.5 21.2857C13.0132 21.2857 13.5185 21.5059 14.046 21.7359C14.6225 21.9871 15.2257 22.25 15.8953 22.25C17.2879 22.25 18.9573 19.8992 20 16.9008C18.3793 16.2202 17.338 14.618 17.338 12.75C17.338 11.121 18.2036 10.0398 19.5 9.25C18.5 7.75 17.0134 7.25 15.9447 7.25C14.8993 7.25 14.2604 7.51225 13.6966 7.74368C13.2514 7.92646 13.0149 8.09001 12.5 8.09001Z" />
+                    </svg> Download for mackbook ro Linux <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
+                        width="17" height="17" color="#050005" fill="none" stroke="#141B34" stroke-width="1.5"
+                        stroke-linecap="round" stroke-linejoin="round">
+                        <path
+                            d="M12.5 8.45596V9L6.5 9C5.56812 9 5.10218 9 4.73463 9.15224C4.24458 9.35523 3.85523 9.74458 3.65224 10.2346C3.5 10.6022 3.5 11.0681 3.5 12C3.5 12.9319 3.5 13.3978 3.65224 13.7654C3.85523 14.2554 4.24458 14.6448 4.73463 14.8478C5.10218 15 5.56812 15 6.5 15H12.5V15.544C12.5 17.6268 12.5 18.6681 13.1003 18.9422C13.7006 19.2163 14.4183 18.5026 15.8536 17.0751L19.4172 13.5311C20.1391 12.8132 20.5 12.4542 20.5 12C20.5 11.5458 20.1391 11.1868 19.4172 10.4689L15.8536 6.92487C14.4183 5.49743 13.7006 4.78372 13.1003 5.05779C12.5 5.33185 12.5 6.37322 12.5 8.45596Z" />
+                    </svg></h3>
+            </div>
+        </div>
+        <div class="topic2">
+            <div class="box2">
+                <p><span class="Download">Download UltraEdit</span> <span> v2025.1 (released 2025-10-10) | Latest
+                        changes</span></p>
             </div>
         </div>
     </div>
 </body>
-
 </html>
