UltraEdit website Design

--- a/video44/index.html
+++ b/video44/index.html
@@ -135,12 +135,55 @@
             background-color: rgb(255, 226, 5);
             margin: 10px auto;
             align-items: center;
+            cursor: pointer;
+        }
+
+        .footer .box1:hover {
+            box-shadow: 0px 0px 4px 0px;
         }
 
         .Download {
             font-size: 25px;
             font-weight: bolder;
             color: gray;
+        }
+
+        /*Topic 2  */
+        .topic3 {
+            display: flex;
+            margin: 10px;
+        }
+
+        .footer .topic3 .box1 {
+            width: 400px;
+            height: 210px;
+            border: 2px solid gray;
+            background-color: rgb(237, 234, 234);
+            cursor: grab;
+            margin: 10px;
+        }
+
+        .footer .topic3 .box1:hover {
+            box-shadow: 0px 0px 4px 0px;
+        }
+
+        .topic3 .box1 .button {
+            width: 150px;
+            padding: 10px;
+            border: 1px solid;
+            margin: auto;
+            background-color: rgb(255, 226, 5);
+            font-weight: bolder;
+            border-radius: 7px;
+            cursor: pointer;
+        }
+
+        .topic3 .box1 .button:hover {
+            box-shadow: 0px 0px 4px 0px;
+        }
+
+        .bit {
+            font-size: 10px;
         }
     </style>
 </head>
@@ -291,10 +334,70 @@
         </div>
         <div class="topic2">
             <div class="box2">
-                <p><span class="Download">Download UltraEdit</span> <span> v2025.1 (released 2025-10-10) | Latest
+                <p><span class="Download"> <img width="50px" style="margin: 10px 0 0 0;"
+                            src="https://www.clipartmax.com/png/full/42-420648_uee-marines-trans-uee-symbol-png.png"
+                            alt=""> Download UltraEdit</span> <span> v2025.1 (released 2025-10-10) | Latest
                         changes</span></p>
+            </div>
+        </div>
+
+        <!-- Topic 3 -->
+        <div class="topic3">
+            <div class="box">
+
+                <div class="box1">
+                    <h2>English</h2>
+                    <h2>Includes all languages</h2>
+                    <div class="button">
+                        Download 64-bit
+                    </div>
+                    <p class="bit">SHA256</p>
+                    <p class="bit">64B95FA0C6F64CD3B6AD19A01AA74E4F303CC12C3B96F1AA129E0F632D8A1C8D</p>
+                </div>
+
+                <div class="box1">
+                    <h2>Deutsch</h2>
+                    <h2>German</h2>
+                    <div class="button">
+                        Download 64-bit
+                    </div>
+                    <p class="bit">SHA256</p>
+                    <p class="bit">64B95FA0C6F64CD3B6AD19A01AA74E4F303CC12C3B96F1AA129E0F632D8A1C8D</p>
+                </div>
+
+                <div class="box1">
+                    <h2>Italiano</h2>
+                    <h2>Italian</h2>
+                    <div class="button">
+                        Download 64-bit
+                    </div>
+                    <p class="bit">SHA256</p>
+                    <p class="bit">64B95FA0C6F64CD3B6AD19A01AA74E4F303CC12C3B96F1AA129E0F632D8A1C8D</p>
+                </div>
+
+                <div class="box1">
+                    <h2>Español</h2>
+                    <h2>Spanish</h2>
+                    <div class="button">
+                        Download 64-bit
+                    </div>
+                    <p class="bit">SHA256</p>
+                    <p class="bit">64B95FA0C6F64CD3B6AD19A01AA74E4F303CC12C3B96F1AA129E0F632D8A1C8D</p>
+                </div>
+
+                <div class="box1">
+                    <h2>Español</h2>
+                    <h2>Spanish</h2>
+                    <div class="button">
+                        Download 64-bit
+                    </div>
+                    <p class="bit">SHA256</p>
+                    <p class="bit">64B95FA0C6F64CD3B6AD19A01AA74E4F303CC12C3B96F1AA129E0F632D8A1C8D</p>
+                </div>
+
             </div>
         </div>
     </div>
 </body>
+
 </html>
