--- a/video46/index.html
+++ b/video46/index.html
@@ -29,7 +29,7 @@
             animation-delay: 3s;
             animation-direction: alternate-reverse;
             /* animation-play-state: paused; */
-            animation: harry2 4s ease-in-out 2s infinite alternate-reverse forwards;
+            /* animation: harry2 4s ease-in-out 2s infinite alternate-reverse forwards; */
         }
 
         @keyframes harryKaAnimation {
@@ -38,7 +38,7 @@
             }
 
             to {
-                transform: translateX(20vw) translateY(20vh) scale(3);
+                transform: translateX(20vw) translateY(0vh) scale(3);
                 background-color: tomato;
             }
         }
