--- a/video63/index.html
+++ b/video63/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     
-
-    <script src="index.js"></script>
+<script src="loops.js"></script>
+    <!-- <script src="index.js"></script> -->
 </body>
 </html>
