maping in array using for loop

--- a/video63/index.html
+++ b/video63/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    
-<script src="loops.js"></script>
+    <script src="mfr.js"></script>
+<!-- <script src="loops.js"></script> -->
     <!-- <script src="index.js"></script> -->
 </body>
 </html>
