--- a/video64/index.html
+++ b/video64/index.html
@@ -23,10 +23,11 @@
             first = "Fire";
         }
                 /*Generate the second word*/
-        if(randomNumber <= 33){
+        let randomNumber2 = Math.floor(Math.random()*100)+1;
+        if(randomNumber2 <= 33){
             second = "Engine";
         }
-        else if(randomNumber >33 && randomNumber <= 66){
+        else if(randomNumber2 >33 && randomNumber2 <= 66){
             second = "Foods";
         }
         else{
@@ -34,10 +35,11 @@
         }
 
         /*Generate the third word*/
-        if(randomNumber <= 33){
+        let randomNumber3 = Math.floor(Math.random()*100)+1;
+        if(randomNumber3 <= 33){
             third = "Bros";
         }
-        else if(randomNumber >33 && randomNumber <= 66){
+        else if(randomNumber3 >33 && randomNumber3 <= 66){
             third = "Limited";
         }
         else{
