--- a/video70/index.html
+++ b/video70/index.html
@@ -31,7 +31,7 @@
             border-radius: 50px;
             transition: all 3s ease-in-out;
             scale: calc(1.8);
-            transform: translateY(300px) rotate(720deg);
+            transform: translateY(300px) rotate(720deg) skewX(20deg);
             animation: identifier 3s ease-in-out infinite alternate-reverse;
         }
         @keyframes identifier {
